fix: items set to hide on desktop take up room on mobile even if hidden on mobile

--- a/src/Styles/callout.css
+++ b/src/Styles/callout.css
@@ -140,15 +140,15 @@
             &.hide {
                 display: none;
             }
-            &.hide-on-mobile {
-                .is-mobile & {
-                    display: none;
-                }
-            }
             &.hide-on-desktop {
                 display: none;
                 .is-mobile & {
-                    display: block !important;
+                    display: block;
+                }
+            }
+            &.hide-on-mobile {
+                .is-mobile & {
+                    display: none;
                 }
             }
             &.hide-in-mode {
