--- a/styles.css
+++ b/styles.css
@@ -1621,15 +1621,15 @@ body {
             &.hide {
                 display: none;
             }
-            &.hide-on-mobile {
-                .is-mobile & {
-                    display: none;
-                }
-            }
             &.hide-on-desktop {
                 display: none;
                 .is-mobile & {
-                    display: block !important;
+                    display: block;
+                }
+            }
+            &.hide-on-mobile {
+                .is-mobile & {
+                    display: none;
                 }
             }
             &.hide-in-mode {
